[package]
name = "mkrl-rust"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of MKRL (Make Record Layout) - a COBOL record layout generator with dialog interface"
authors = ["Bill Waller <billxwaller@gmail.com>"]
license = "GPL-3.0"

[dependencies]
cursive = "0.21"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
